# Copyright (C) 2006-2014 David Sugar, Tycho Softworks.
# Copyright (C) 2015-2017 Cherokees of Idaho.
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

MAINTAINERCLEANFILES = Makefile.in Makefile

pkgincludedir = $(includedir)/sipwitch
pkginclude_HEADERS = service.h control.h sipwitch.h namespace.h \
	uri.h mapped.h events.h modules.h cache.h stats.h cdr.h voip.h

